# Design-Patterns

./: CMakeLists.txt  README.md
CreationalPatterns/: CreateFactory.cpp  CreateFactory.hpp  Director.cpp  Director.hpp  Singelton.cpp  Singelton.hpp
CreationalPatterns/Builder/: Builder.cpp  Builder.hpp  Product.cpp  Product.hpp
CreationalPatterns/Factory/: Ship.cpp  Ship.hpp  Transport.cpp  Transport.hpp  Truck.cpp  Truck.hpp
src/: main.cpp
test/: Test_Builder.cpp  Test_Builder.hpp  Test_Factory.cpp  Test_Factory.hpp  Test_Singelton.cpp  Test_Singelton.hpp
